--- a/index.html
+++ b/index.html
@@ -4,35 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sagar Poudel - Resume</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
-        <h1>Sagar Poudel</h1>
-        <p>Software Engineer | Full Stack Developer | Node Js | React Js | JavaScript</p>
-        <p>Merrylands, New South Wales, Australia</p>
+        <div class="container">
+            <h1>Sagar Poudel</h1>
+            <p class="subtitle">Software Engineer | Full Stack Developer | Node Js | React Js | JavaScript</p>
+            <p class="location">Merrylands, New South Wales, Australia</p>
+        </div>
     </header>
-    <section>
-        <h2>Education</h2>
-        <div class="education">
-            <h3>Swinburne University of Technology Sydney</h3>
-            <p>Master of Information Technology (Professional Computing), Information Technology · (September 2022 - May 2024)</p>
-        </div>
-        <div class="education">
-            <h3>Islington College Kathmandu</h3>
-            <p>Bsc(hons) Computing, Computing · (2018 - 2021)</p>
-        </div>
-        <div class="education">
-            <h3>NATIONAL INSTITUTE OF SCIENCES</h3>
-            <p>+2, Science · (2016 - 2018)</p>
-        </div>
-        <div class="education">
-            <h3>West Zone English Medium High School</h3>
-            <p>S.L.C · (2016 - 2016)</p>
-        </div>
-        <div class="education">
-            <h3>Dented Code Academy</h3>
-            <p> · (July 2024)</p>
+    <section class="education-section">
+        <div class="container">
+            <h2>Education</h2>
+            <div class="education">
+                <i class="fas fa-university"></i>
+                <div class="education-details">
+                    <h3>Swinburne University of Technology Sydney</h3>
+                    <p>Master of Information Technology (Professional Computing), Information Technology · (September 2022 - May 2024)</p>
+                </div>
+            </div>
+            <div class="education">
+                <i class="fas fa-university"></i>
+                <div class="education-details">
+                    <h3>Islington College Kathmandu</h3>
+                    <p>Bsc(hons) Computing, Computing · (2018 - 2021)</p>
+                </div>
+            </div>
+            <div class="education">
+                <i class="fas fa-university"></i>
+                <div class="education-details">
+                    <h3>NATIONAL INSTITUTE OF SCIENCES</h3>
+                    <p>+2, Science · (2016 - 2018)</p>
+                </div>
+            </div>
+            <div class="education">
+                <i class="fas fa-school"></i>
+                <div class="education-details">
+                    <h3>West Zone English Medium High School</h3>
+                    <p>S.L.C · (2016 - 2016)</p>
+                </div>
+            </div>
+            <div class="education">
+                <i class="fas fa-code"></i>
+                <div class="education-details">
+                    <h3>Dented Code Academy</h3>
+                    <p> · (July 2024)</p>
+                </div>
+            </div>
         </div>
     </section>
 </body>
