--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
                 <i class="fas fa-code"></i>
                 <div class="education-details">
                     <h3>Dented Code Academy</h3>
-                    <p> · (July 2024)</p>
+                    <p>(July 2024)</p>
                 </div>
             </div>
         </div>
     </section>
+    
+    
 </body>
 </html>
