--- a/index.html
+++ b/index.html
@@ -3,33 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid Portfolio</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-    <style>
-       
-    </style>
 </head>
 <body>
-    <div class="grid-container">
-        <header>
-                <h1>Sagar Poudel</h1>
-                <p class="subtitle">Software Engineer | Full Stack Developer | Node Js | React Js | JavaScript</p>
-                <p class="location">Merrylands, New South Wales, Australia</p>
-        </header>
-        <div class="contact">
-            <h1>Contact</h1>
-            <p>sagarpoudel638@gmail.com</p>
-            <p>www.linkedin.com/in/sagarpoudel638</p>
+    <div class="wrapper">
 
-            <h1> Top Skills</h1>
-            <p>Web Development</p>
-            <p>Laravel</p>
-            <p>Node Js </p>
-            <p>React Js</p>
-            <p>Python</p>
+        <header class="header">
+            <h1>Sagar Poudel</h1>
+            <p class="subtitle">Software Engineer | Full Stack Developer | Node Js | React Js | JavaScript</p>
+            <p class="location">Merrylands, New South Wales, Australia</p>
+        </header>
+
+        <div class="profile">
+            <h2>Profile</h2>
+            <div class="typewriter">
+                <p id="line1" style="animation-delay: 0s;">Aiming to leverage proven</p>
+                <p id="line2" style="animation-delay: 3s;">communication, multitasking, and</p>
+                <p id="line3" style="animation-delay: 6s;">teamwork skills to successfully fill the</p>
+                <p id="line4" style="animation-delay: 9s;">required role at your company.</p>
+                <p id="line5" style="animation-delay: 12s;">Frequently praised as diligent by my</p>
+                <p id="line6" style="animation-delay: 15s;">peers, I can be relied upon to help your</p>
+                <p id="line7" style="animation-delay: 18s;">company achieve its goals.</p>
+            </div>
         </div>
+
+
         <div class="education-section" >
         <div class="container">
             <h2>Education</h2>
@@ -71,6 +72,76 @@
             
         </div>
         </div>
-      </div>
+
+
+        <div class="skills">
+            <h2>Skills</h2>
+            <ul class="skills-list">
+                <li><img src="assets/python.png" alt="Python"> Python</li>
+                <li><img src="assets/monitor.png" alt="BASH"> BASH scripting</li>
+                <li><img src="assets/coding.png" alt="HTML"> HTML, CSS, and JavaScript</li>
+                <li><img src="assets/sql-server.png" alt="SQL"> SQL (MySQL, Oracle)</li>
+                <li><img src="assets/web.png" alt="PHP"> PHP and Laravel Framework</li>
+                <li><img src="assets/java.png" alt="Java"> JAVA Programming</li>
+                <li><img src="assets/mobile-development.png" alt="Flutter"> Android and iOS development (Flutter)</li>
+                <li><img src="assets/cloud-computing.png" alt="Cloud"> Cloud Computing, Terraform</li>
+            </ul>
+        </div>
+        <div class="characteristics">
+            <h2>Characteristics</h2>
+            <ul class="characteristics-list">
+                <li><img src="assets/eavesdropping.png" alt="Listener"> Excellent listener</li>
+                <li><img src="assets/friends.png" alt="Friendly"> Friendly, courteous, and service-oriented</li>
+                <li><img src="assets/stress.png" alt="Pressure"> Poised under pressure</li>
+                <li><img src="assets/conversation.png" alt="Communicator"> Solid written and verbal communicator</li>
+            </ul>
+        </div>
+        <div class="contact">
+            <h2>Contact</h2>
+            <ul class="contact-list">
+                <li><img src="assets/phone-call.png" alt="Phone"> 0415367939</li>
+                <li><img src="assets/linkedin.png" alt="LinkedIn"><a href="https://www.linkedin.com/in/sagarpoudel638/" target="_blank">LinkedIn</a></li>
+                <li><img src="assets/email.png" alt="Email"><a href="mailto:mailtosagarpoudel@gmail.com">mailtosagarpoudel@gmail.com</a></li>
+                <li><img src="assets/location.png" alt="Address"> Merrylands, NSW, 2160</li>
+            </ul>
+        </div>
+        <div class="projects">
+            <h2>Projects and Achievements (Academic)</h2>
+            <div class="open-source-project">
+                <a href="https://github.com/sagarpoudel638/Team01/tree/SagarPoudel" target="_blank">Open Source Project (XC3)</a>
+            </div>
+            <div class="open-source-project">
+                <a href="https://github.com/sagarpoudel638/fyp/tree/main/FYP/LaravelProject/IMS" target="_blank">Customer Management Project (LARAVEL)</a>
+            </div>
+            <div class="open-source-project">
+                <a href="https://github.com/sagarpoudel638/BookStoreManagement" target="_blank">Book Store Management (Java)</a>
+            </div>
+            <div class="open-source-project">
+                <a href="https://github.com/sagarpoudel638/DeveloperAppointment" target="_blank">Developer Appointment System (Jave)</a>
+            </div>
+            <div class="open-source-project">
+                <a href="https://github.com/sagarpoudel638/LibraryManagementSystem" target="_blank">Library Management System (Python)</a>
+            </div>
+            <div class="open-source-project">
+                <a href="https://github.com/sagarpoudel638/MotorShopManagement" target="_blank">Motor Shop Management System (XML)</a>
+            </div>
+            <div class="open-source-project">
+                <a href="https://github.com/sagarpoudel638/PortfolioWebsite" target="_blank">Portfolio Website</a>
+            </div>
+            <div class="open-source-project">
+                <a href="https://github.com/sagarpoudel638/PatientRecordSystem" target="_blank">Patient Record System (Oracle/ SQL)</a>
+            </div>
+        </div>
+        <footer class="footer">
+            <p>&copy; 2024 Sagar Poudel. All rights reserved.</p>
+            <nav class="footer-nav">
+                <a href="#projects">Projects</a>
+                <a href="#skills">Skills</a>
+                <a href="#contact">Contact</a>
+            </nav>
+            <a href="#" class="back-to-top">Back to Top</a>
+        </footer>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
