typo error change

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <a href="https://github.com/sagarpoudel638/BookStoreManagement" target="_blank">Book Store Management (Java)</a>
             </div>
             <div class="open-source-project">
-                <a href="https://github.com/sagarpoudel638/DeveloperAppointment" target="_blank">Developer Appointment System (Jave)</a>
+                <a href="https://github.com/sagarpoudel638/DeveloperAppointment" target="_blank">Developer Appointment System (Java)</a>
             </div>
             <div class="open-source-project">
                 <a href="https://github.com/sagarpoudel638/LibraryManagementSystem" target="_blank">Library Management System (Python)</a>
